@@ -47,10 +47,12 @@ import java.nio.file.Paths;
 import java.util.*;
 import java.util.stream.Stream;
 
-import static junit.framework.Assert.assertEquals;
-import static junit.framework.TestCase.*;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
 
 public class GermanSpellerRuleTest {
 
@@ -373,11 +375,11 @@ public class GermanSpellerRuleTest {
     GermanSpellerRule rule = new GermanSpellerRule(TestTools.getMessages("de"), GERMAN_DE);
     List<String> list1 = new ArrayList<>(Arrays.asList("Mafiosi s", "foo"));
     rule.filterForLanguage(list1);
-    assertThat(list1, is(Arrays.asList("foo")));
+    assertThat(list1, is(List.of("foo")));
 
     List<String> list2 = new ArrayList<>(Arrays.asList("-bar", "foo"));
     rule.filterForLanguage(list2);
-    assertThat(list2, is(Arrays.asList("foo")));
+    assertThat(list2, is(List.of("foo")));
 
     GermanSpellerRule ruleCH = new SwissGermanSpellerRule(TestTools.getMessages("de"), GERMAN_CH);
     List<String> list3 = new ArrayList<>(Arrays.asList("Muße", "foo"));
@@ -1479,7 +1481,7 @@ public class GermanSpellerRuleTest {
   }
 
   private Dictionary getDictionary(List<byte[]> lines, InputStream infoFile) throws IOException {
-    Collections.sort(lines, FSABuilder.LEXICAL_ORDERING);
+    lines.sort(FSABuilder.LEXICAL_ORDERING);
     FSA fsa = FSABuilder.build(lines);
     ByteArrayOutputStream fsaOutStream = new CFSA2Serializer().serialize(fsa, new ByteArrayOutputStream());
     ByteArrayInputStream fsaInStream = new ByteArrayInputStream(fsaOutStream.toByteArray());
@@ -1491,7 +1493,7 @@ public class GermanSpellerRuleTest {
     for (String expectedTerm : expectedTerms) {
       assertTrue("Not found: '" + expectedTerm + "' in: " + suggestions + " for input '" + input + "'", suggestions.contains(expectedTerm));
     }
-    if (expectedTerms.length == 0 && suggestions.size() > 0) {
+    if (expectedTerms.length == 0 && !suggestions.isEmpty()) {
       fail("Didn't expect suggestions at all for '" + input + "', got: " + suggestions);
     }
   }
@@ -1500,7 +1502,7 @@ public class GermanSpellerRuleTest {
     List<String> suggestions = rule.getSuggestions(input);
     int i = 0;
     for (String expectedTerm : expectedTerms) {
-      assertTrue("Not found at position " + i + ": '" + expectedTerm + "' in: " + suggestions + " for input '" + input + "'", suggestions.get(i).equals(expectedTerm));
+      assertEquals("Not found at position " + i + ": '" + expectedTerm + "' in: " + suggestions + " for input '" + input + "'", suggestions.get(i), expectedTerm);
       i++;
     }
   }
